<resources>
    <string name="app_name" translatable="false">CharCode</string>
    <string name="button_send">To Unicode</string>
    <string name="button_toChar">To character</string>
    <string name="edit_char">Character</string>
    <string name="empty_ascii">Please enter a Unicode</string>
    <string name="empty_char">Empty character</string>
    <string name="edit_hex_unicode">Hexadecimal Unicode</string>
    <string name="edit_unicode">Decimal Unicode</string>
    <string name="copy_char">Copy character</string>
    <string name="copy_dec_unicode">Copy dec Unicode</string>
    <string name="copy_hex_unicode">Copy hex Unicode</string>
    <string name="char_detail">Character Detail</string>
    <string name="toast_copied">"Copied: "</string>
    <string name="invalid_unicode">Invalid Unicode</string>
    <string name="text_char">Char</string>
    <string name="dec_unicode_abbr">Dec Unicode</string>
    <string name="hex_unicode_abbr">Hex Unicode</string>
    <string name="surrogate_pair">Surrogate pair</string>
    <string name="label_about">About</string>
    <string name="label_version">Version</string>
    <string name="label_dev"><a href="https://github.com/trifirew">Trifire</a> 2017</string>
    <string name="view_source"><a href="https://github.com/trifirew/charcode">View source</a></string>
    <string name="license_u"><u>Open source license</u></string>
    <string name="license">Open source license</string>
    <string name="delete">Delete</string>
    <string name="clear_history">Clear history</string>
    <string name="all_history_cleared">Cleared all history</string>
</resources>