<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.myfirstapp.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/toAsciiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="convert"
        android:text="@string/button_send"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/charTextInput"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/charTextInput"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/toCharButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="convert"
        android:text="@string/button_toChar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/asciiTextInput"
        android:layout_marginLeft="0dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/asciiTextInput" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/button_show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.example.myfirstapp.CTextInputLayout
        android:id="@+id/charTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/toAsciiButton"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/charEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_char"
            android:imeOptions="actionGo"
            android:inputType="textNoSuggestions"
            android:maxLength="1" />
    </com.example.myfirstapp.CTextInputLayout>

    <com.example.myfirstapp.CTextInputLayout
        android:id="@+id/asciiTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/toCharButton"
        app:layout_constraintTop_toBottomOf="@+id/charTextInput">

        <EditText
            android:id="@+id/asciiEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_unicode"
            android:imeOptions="actionGo"
            android:inputType="number" />
    </com.example.myfirstapp.CTextInputLayout>
</android.support.constraint.ConstraintLayout>
