<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelHexUnicodeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelDecUnicodeTV"
            tools:text="@string/edit_hex_unicode" />

        <TextView
            android:id="@+id/detailCharTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCharTextView" />

        <TextView
            android:id="@+id/labelDecUnicodeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/detailDecUnicodeTV"
            app:layout_constraintTop_toBottomOf="@+id/space"
            tools:text="@string/edit_unicode" />

        <TextView
            android:id="@+id/detailDecUnicodeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="TextView"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelDecUnicodeTV"
            app:layout_constraintLeft_toRightOf="@+id/labelDecUnicodeTV"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/detailHexUnicodeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelHexUnicodeTV"
            app:layout_constraintLeft_toLeftOf="@+id/detailDecUnicodeTV"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2">

        <Button
            android:id="@+id/detailCopyCharBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:paddingBottom="0dp"
            android:paddingEnd="16dp"
            android:paddingTop="0dp"
            android:text="@string/copy_char"
            android:textAlignment="viewEnd"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/detailCopyDecBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:paddingBottom="0dp"
            android:paddingEnd="16dp"
            android:paddingTop="0dp"
            android:text="@string/copy_dec_unicode"
            android:textAlignment="viewEnd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCopyCharBtn" />

        <Button
            android:id="@+id/detailCopyHexBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:paddingBottom="0dp"
            android:paddingEnd="16dp"
            android:paddingTop="0dp"
            android:text="@string/copy_hex_unicode"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCopyDecBtn" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>